@@ -14,6 +14,8 @@ import net.minecraft.data.family.BlockFamily;
 import net.minecraft.entity.EntityType;
 import net.minecraft.item.Item;
 import net.minecraft.item.Items;
+import net.minecraft.tag.BlockTags;
+import net.minecraft.tag.ItemTags;
 import net.minecraft.tag.TagKey;
 
 import java.util.List;
@@ -21,7 +23,7 @@ import java.util.Map;
 
 public class DatagenLists {
 	public static class BlockLists {
-		public static final List<Block> PRIMITIVE_MACHINES = List.of(
+		public static final List<Block> PRIMITIVE_MACHINES = ImmutableList.of(
 				AMBlocks.PRIMITIVE_TANK.get(),
 				AMBlocks.PRIMITIVE_SOLID_GENERATOR.get(),
 				AMBlocks.PRIMITIVE_FLUID_GENERATOR.get(),
@@ -39,7 +41,7 @@ public class DatagenLists {
 				AMBlocks.PRIMITIVE_CAPACITOR.get()
 		);
 		
-		public static final List<Block> BASIC_MACHINES = List.of(
+		public static final List<Block> BASIC_MACHINES = ImmutableList.of(
 				AMBlocks.BASIC_TANK.get(),
 				AMBlocks.BASIC_SOLID_GENERATOR.get(),
 				AMBlocks.BASIC_FLUID_GENERATOR.get(),
@@ -57,7 +59,7 @@ public class DatagenLists {
 				AMBlocks.BASIC_CAPACITOR.get()
 		);
 		
-		public static final List<Block> ADVANCED_MACHINES = List.of(
+		public static final List<Block> ADVANCED_MACHINES = ImmutableList.of(
 				AMBlocks.ADVANCED_TANK.get(),
 				AMBlocks.ADVANCED_SOLID_GENERATOR.get(),
 				AMBlocks.ADVANCED_FLUID_GENERATOR.get(),
@@ -75,7 +77,7 @@ public class DatagenLists {
 				AMBlocks.ADVANCED_CAPACITOR.get()
 		);
 		
-		public static final List<Block> ELITE_MACHINES = List.of(
+		public static final List<Block> ELITE_MACHINES = ImmutableList.of(
 				AMBlocks.ELITE_TANK.get(),
 				AMBlocks.ELITE_SOLID_GENERATOR.get(),
 				AMBlocks.ELITE_FLUID_GENERATOR.get(),
@@ -93,13 +95,13 @@ public class DatagenLists {
 				AMBlocks.ELITE_CAPACITOR.get()
 		);
 		
-		public static final List<Block> CREATIVE_MACHINES = List.of(
+		public static final List<Block> CREATIVE_MACHINES = ImmutableList.of(
 				AMBlocks.CREATIVE_TANK.get(),
 				AMBlocks.CREATIVE_BUFFER.get(),
 				AMBlocks.CREATIVE_CAPACITOR.get()
 		);
 		
-		public static final List<Block> MISC_MACHINES = List.of(
+		public static final List<Block> MISC_MACHINES = ImmutableList.of(
 				AMBlocks.FLUID_EXTRACTOR.get(),
 				AMBlocks.FLUID_INSERTER.get(),
 				
@@ -109,36 +111,36 @@ public class DatagenLists {
 				AMBlocks.PUMP.get()
 		);
 		
-		public static final List<Block> MACHINES = new ImmutableList.Builder<Block>()
-				.addAll(PRIMITIVE_MACHINES)
-				.addAll(BASIC_MACHINES)
-				.addAll(ADVANCED_MACHINES)
-				.addAll(ELITE_MACHINES)
-				.addAll(CREATIVE_MACHINES)
-				.addAll(MISC_MACHINES)
-				.build();
+		public static final List<Block> MACHINES = ImmutableList.<Block>builder()
+																.addAll(PRIMITIVE_MACHINES)
+																.addAll(BASIC_MACHINES)
+																.addAll(ADVANCED_MACHINES)
+																.addAll(ELITE_MACHINES)
+																.addAll(CREATIVE_MACHINES)
+																.addAll(MISC_MACHINES)
+																.build();
 		
-		public static final List<Block> ENERGY_CABLES = List.of(
+		public static final List<Block> ENERGY_CABLES = ImmutableList.of(
 				AMBlocks.PRIMITIVE_ENERGY_CABLE.get(),
 				AMBlocks.BASIC_ENERGY_CABLE.get(),
 				AMBlocks.ADVANCED_ENERGY_CABLE.get(),
 				AMBlocks.ELITE_ENERGY_CABLE.get()
 		);
 		
-		public static final List<Block> INFINIBURN_BLOCKS = List.of(
+		public static final List<Block> INFINIBURN_BLOCKS = ImmutableList.of(
 				AMBlocks.BLAZING_ASTEROID_STONE.get()
 		);
 	}
 	
 	public static class ItemLists {
-		public static final List<Item> DRILLS = List.of(
+		public static final List<Item> DRILLS = ImmutableList.of(
 				AMItems.PRIMITIVE_DRILL.get(),
 				AMItems.BASIC_DRILL.get(),
 				AMItems.ADVANCED_DRILL.get(),
 				AMItems.ELITE_DRILL.get()
 		);
 		
-		public static final List<Item> ONE_BIOFUEL_ITEMS = List.of(
+		public static final List<Item> ONE_BIOFUEL_ITEMS = ImmutableList.of(
 				Items.GRASS,
 				Items.FERN,
 				Items.DEAD_BUSH,
@@ -164,7 +166,7 @@ public class DatagenLists {
 				Items.HONEYCOMB
 		);
 		
-		public static final List<Item> TWO_BIOFUEL_ITEMS = List.of(
+		public static final List<Item> TWO_BIOFUEL_ITEMS = ImmutableList.of(
 				Items.PORKCHOP,
 				Items.COOKED_PORKCHOP,
 				Items.BEEF,
@@ -190,12 +192,12 @@ public class DatagenLists {
 				Items.CHORUS_PLANT
 		);
 		
-		public static final List<Item> FOUR_BIOFUEL_ITEMS = List.of(
+		public static final List<Item> FOUR_BIOFUEL_ITEMS = ImmutableList.of(
 				Items.CAKE,
 				Items.SPORE_BLOSSOM
 		);
 		
-		public static final List<Item> NINE_BIOFUEL_ITEMS = List.of(
+		public static final List<Item> NINE_BIOFUEL_ITEMS = ImmutableList.of(
 				Items.HONEY_BLOCK,
 				Items.HONEYCOMB_BLOCK,
 				Items.PUMPKIN_PIE,
@@ -204,7 +206,7 @@ public class DatagenLists {
 	}
 	
 	public static class FluidLists {
-		public static final List<ExtendedFluid> INDUSTRIAL_FLUIDS = List.of(
+		public static final List<ExtendedFluid> INDUSTRIAL_FLUIDS = ImmutableList.of(
 				AMFluids.OIL,
 				AMFluids.FUEL,
 				AMFluids.BIOMASS,
@@ -212,7 +214,7 @@ public class DatagenLists {
 				AMFluids.HYDROGEN
 		);
 		
-		public static final List<ExtendedFluid> MOLTEN_FLUIDS = List.of(
+		public static final List<ExtendedFluid> MOLTEN_FLUIDS = ImmutableList.of(
 				AMFluids.MOLTEN_AMETHYST,
 				AMFluids.MOLTEN_ASTERITE,
 				AMFluids.MOLTEN_BRONZE,
@@ -239,37 +241,37 @@ public class DatagenLists {
 		);
 		
 		public static final List<ExtendedFluid> FLUIDS = ImmutableList.<ExtendedFluid>builder()
-																	  .addAll(INDUSTRIAL_FLUIDS)
-																	  .addAll(MOLTEN_FLUIDS)
-																	  .build();
+																			   .addAll(INDUSTRIAL_FLUIDS)
+																			   .addAll(MOLTEN_FLUIDS)
+																			   .build();
 	}
 	
 	public static class EntityTypeLists {
-		public static final List<EntityType<?>> FISH = List.of(
+		public static final List<EntityType<?>> FISH = ImmutableList.of(
 				EntityType.COD,
 				EntityType.PUFFERFISH,
 				EntityType.SALMON,
 				EntityType.TROPICAL_FISH
 		);
 		
-		public static final List<EntityType<?>> SQUIDS = List.of(
+		public static final List<EntityType<?>> SQUIDS = ImmutableList.of(
 				EntityType.SQUID,
 				EntityType.GLOW_SQUID
 		);
 		
-		public static final List<EntityType<?>> GUARDIANS = List.of(
+		public static final List<EntityType<?>> GUARDIANS = ImmutableList.of(
 				EntityType.GUARDIAN,
 				EntityType.ELDER_GUARDIAN
 		);
 		
-		public static final List<EntityType<?>> SKELETONS = List.of(
+		public static final List<EntityType<?>> SKELETONS = ImmutableList.of(
 				EntityType.SKELETON,
 				EntityType.WITHER_SKELETON,
 				EntityType.STRAY,
 				EntityType.SKELETON_HORSE
 		);
 		
-		public static final List<EntityType<?>> ZOMBIES = List.of(
+		public static final List<EntityType<?>> ZOMBIES = ImmutableList.of(
 				EntityType.ZOMBIE,
 				EntityType.ZOMBIE_VILLAGER,
 				EntityType.ZOMBIFIED_PIGLIN,
@@ -279,23 +281,23 @@ public class DatagenLists {
 				EntityType.DROWNED
 		);
 		
-		public static final List<EntityType<?>> SPACE_SLIMES = List.of(
+		public static final List<EntityType<?>> SPACE_SLIMES = ImmutableList.of(
 				AMEntityTypes.SPACE_SLIME.get(),
 				AMEntityTypes.SUPER_SPACE_SLIME.get()
 		);
 		
-		public static final List<EntityType<?>> DOES_NOT_BREATHE_ENTITY_TYPES = List.of(
+		public static final List<EntityType<?>> DOES_NOT_BREATHE_ENTITY_TYPES = ImmutableList.of(
 				EntityType.ARMOR_STAND,
 				EntityType.IRON_GOLEM
 		);
 		
-		public static final List<EntityType<?>> CAN_BREATHE_WATER_ENTITY_TYPES = List.of(
+		public static final List<EntityType<?>> CAN_BREATHE_WATER_ENTITY_TYPES = ImmutableList.of(
 				EntityType.AXOLOTL,
 				EntityType.DOLPHIN, // not scientifically accurate, but shut up
 				EntityType.TURTLE
 		);
 		
-		public static final List<EntityType<?>> CAN_BREATHE_LAVA_ENTITY_TYPES = List.of(
+		public static final List<EntityType<?>> CAN_BREATHE_LAVA_ENTITY_TYPES = ImmutableList.of(
 				EntityType.VEX,
 				EntityType.MAGMA_CUBE,
 				EntityType.BLAZE,
@@ -308,7 +310,7 @@ public class DatagenLists {
 	}
 	
 	public static class ItemTagLists {
-		public static final List<TagKey<Item>> ONE_BIOFUEL_TAGS = List.of(
+		public static final List<TagKey<Item>> ONE_BIOFUEL_TAGS = ImmutableList.of(
 				AMTagKeys.createCommonItemTag("mushrooms"),
 				AMTagKeys.createCommonItemTag("nether_fungi"),
 				AMTagKeys.createCommonItemTag("nether_roots"),
@@ -317,118 +319,115 @@ public class DatagenLists {
 				AMTagKeys.createCommonItemTag("seeds")
 		);
 		
-		public static final List<TagKey<Item>> FOUR_BIOFUEL_TAGS = List.of(
+		public static final List<TagKey<Item>> FOUR_BIOFUEL_TAGS = ImmutableList.of(
 				AMTagKeys.createCommonItemTag("metal_apples")
 		);
 		
-		public static final List<TagKey<Item>> NINE_BIOFUEL_TAGS = List.of(
+		public static final List<TagKey<Item>> NINE_BIOFUEL_TAGS = ImmutableList.of(
 				AMTagKeys.createCommonItemTag("gourds")
 		);
 		
 		/**
 		 * To add vanilla tags to an Astromine tag they need to be 'forced'
 		 */
-		public static final List<TagKey<Item>> ONE_BIOFUEL_TAGS_FORCED = List.of(
-				net.minecraft.tag.ItemTags.SMALL_FLOWERS,
-				net.minecraft.tag.ItemTags.LEAVES
+		public static final List<TagKey<Item>> ONE_BIOFUEL_TAGS_FORCED = ImmutableList.of(
+				ItemTags.SMALL_FLOWERS,
+				ItemTags.LEAVES
 		);
 		
-		public static final List<TagKey<Item>> TWO_BIOFUEL_TAGS_FORCED = List.of(
-				net.minecraft.tag.ItemTags.TALL_FLOWERS,
-				net.minecraft.tag.ItemTags.SAPLINGS
+		public static final List<TagKey<Item>> TWO_BIOFUEL_TAGS_FORCED = ImmutableList.of(
+				ItemTags.TALL_FLOWERS,
+				ItemTags.SAPLINGS
 		);
 		
-		public static final List<TagKey<Item>> FOUR_BIOFUEL_TAGS_FORCED = List.of(
-				net.minecraft.tag.ItemTags.FISHES
+		public static final List<TagKey<Item>> FOUR_BIOFUEL_TAGS_FORCED = ImmutableList.of(
+				ItemTags.FISHES
 		);
 		
-		public static final Map<List<ItemVariant>, TagKey<Item>> GENERIC_TAGS = Map.of(
+		public static final Map<List<ItemVariant>, TagKey<Item>> GENERIC_TAGS = ImmutableMap.of(
 				ItemVariantLists.CLUSTER_VARIANTS, AMTagKeys.createCommonItemTag("clusters"),
 				ItemVariantLists.ARMOR_VARIANTS, AMTagKeys.createCommonItemTag("armor"),
 				ItemVariantLists.TOOL_VARIANTS, AMTagKeys.createCommonItemTag("tools")
 		);
 		
 		public static final Map<TagKey<Block>, TagKey<Item>> COPY = ImmutableMap.<TagKey<Block>, TagKey<Item>>builder()
-																				.putAll(Map.of(
-																						AMTagKeys.BlockTags.YELLOW_SANDSTONES, AMTagKeys.ItemTags.YELLOW_SANDSTONES,
-																						AMTagKeys.BlockTags.RED_SANDSTONES, AMTagKeys.ItemTags.RED_SANDSTONES,
-																						AMTagKeys.BlockTags.SANDSTONES, AMTagKeys.ItemTags.SANDSTONES,
-																						AMTagKeys.BlockTags.QUARTZ_BLOCKS, AMTagKeys.ItemTags.QUARTZ_BLOCKS,
-																						AMTagKeys.BlockTags.UNWAXED_COPPER_BLOCKS, AMTagKeys.ItemTags.UNWAXED_COPPER_BLOCKS,
-																						AMTagKeys.BlockTags.WAXED_COPPER_BLOCKS, AMTagKeys.ItemTags.WAXED_COPPER_BLOCKS,
-																						AMTagKeys.BlockTags.COPPER_BLOCKS, AMTagKeys.ItemTags.COPPER_BLOCKS,
-																						AMTagKeys.BlockTags.UNWAXED_CUT_COPPER, AMTagKeys.ItemTags.UNWAXED_CUT_COPPER,
-																						AMTagKeys.BlockTags.WAXED_CUT_COPPER, AMTagKeys.ItemTags.WAXED_CUT_COPPER,
-																						AMTagKeys.BlockTags.CUT_COPPER, AMTagKeys.ItemTags.CUT_COPPER
-																				)).putAll(Map.of(
-						AMTagKeys.BlockTags.PURPUR_BLOCKS, AMTagKeys.ItemTags.PURPUR_BLOCKS,
-						AMTagKeys.BlockTags.MUSHROOMS, AMTagKeys.ItemTags.MUSHROOMS,
-						AMTagKeys.BlockTags.MUSHROOM_BLOCKS, AMTagKeys.ItemTags.MUSHROOM_BLOCKS,
-						AMTagKeys.BlockTags.NETHER_FUNGI, AMTagKeys.ItemTags.NETHER_FUNGI,
-						AMTagKeys.BlockTags.NETHER_ROOTS, AMTagKeys.ItemTags.NETHER_ROOTS,
-						AMTagKeys.BlockTags.NETHER_VINES, AMTagKeys.ItemTags.NETHER_VINES,
-						AMTagKeys.BlockTags.PUMPKINS, AMTagKeys.ItemTags.PUMPKINS,
-						AMTagKeys.BlockTags.GOURDS, AMTagKeys.ItemTags.GOURDS,
-						AMTagKeys.BlockTags.WEEPING_VINES, AMTagKeys.ItemTags.WEEPING_VINES,
-						AMTagKeys.BlockTags.TWISTING_VINES, AMTagKeys.ItemTags.TWISTING_VINES
-				)).putAll(Map.of(
-						ConventionalBlockTags.ORES, ConventionalItemTags.ORES
-				)).build();
+				.put(AMTagKeys.BlockTags.YELLOW_SANDSTONES, AMTagKeys.ItemTags.YELLOW_SANDSTONES)
+				.put(AMTagKeys.BlockTags.RED_SANDSTONES, AMTagKeys.ItemTags.RED_SANDSTONES)
+				.put(AMTagKeys.BlockTags.SANDSTONES, AMTagKeys.ItemTags.SANDSTONES)
+				.put(AMTagKeys.BlockTags.QUARTZ_BLOCKS, AMTagKeys.ItemTags.QUARTZ_BLOCKS)
+				.put(AMTagKeys.BlockTags.UNWAXED_COPPER_BLOCKS, AMTagKeys.ItemTags.UNWAXED_COPPER_BLOCKS)
+				.put(AMTagKeys.BlockTags.WAXED_COPPER_BLOCKS, AMTagKeys.ItemTags.WAXED_COPPER_BLOCKS)
+				.put(AMTagKeys.BlockTags.COPPER_BLOCKS, AMTagKeys.ItemTags.COPPER_BLOCKS)
+				.put(AMTagKeys.BlockTags.UNWAXED_CUT_COPPER, AMTagKeys.ItemTags.UNWAXED_CUT_COPPER)
+				.put(AMTagKeys.BlockTags.WAXED_CUT_COPPER, AMTagKeys.ItemTags.WAXED_CUT_COPPER)
+				.put(AMTagKeys.BlockTags.CUT_COPPER, AMTagKeys.ItemTags.CUT_COPPER)
+				.put(AMTagKeys.BlockTags.PURPUR_BLOCKS, AMTagKeys.ItemTags.PURPUR_BLOCKS)
+				.put(AMTagKeys.BlockTags.MUSHROOMS, AMTagKeys.ItemTags.MUSHROOMS)
+				.put(AMTagKeys.BlockTags.MUSHROOM_BLOCKS, AMTagKeys.ItemTags.MUSHROOM_BLOCKS)
+				.put(AMTagKeys.BlockTags.NETHER_FUNGI, AMTagKeys.ItemTags.NETHER_FUNGI)
+				.put(AMTagKeys.BlockTags.NETHER_ROOTS, AMTagKeys.ItemTags.NETHER_ROOTS)
+				.put(AMTagKeys.BlockTags.NETHER_VINES, AMTagKeys.ItemTags.NETHER_VINES)
+				.put(AMTagKeys.BlockTags.PUMPKINS, AMTagKeys.ItemTags.PUMPKINS)
+				.put(AMTagKeys.BlockTags.GOURDS, AMTagKeys.ItemTags.GOURDS)
+				.put(AMTagKeys.BlockTags.WEEPING_VINES, AMTagKeys.ItemTags.WEEPING_VINES)
+				.put(AMTagKeys.BlockTags.TWISTING_VINES, AMTagKeys.ItemTags.TWISTING_VINES)
+				.put(ConventionalBlockTags.ORES, ConventionalItemTags.ORES)
+				.build();
 		
-		public static final Map<BlockFamily.Variant, TagKey<Item>> BLOCK_FAMILY_VARIANTS = Map.of(
-				BlockFamily.Variant.SLAB, net.minecraft.tag.ItemTags.SLABS,
-				BlockFamily.Variant.STAIRS, net.minecraft.tag.ItemTags.STAIRS,
-				BlockFamily.Variant.WALL, net.minecraft.tag.ItemTags.WALLS,
-				BlockFamily.Variant.BUTTON, net.minecraft.tag.ItemTags.BUTTONS,
-				BlockFamily.Variant.DOOR, net.minecraft.tag.ItemTags.DOORS,
-				BlockFamily.Variant.FENCE, net.minecraft.tag.ItemTags.FENCES,
-				BlockFamily.Variant.SIGN, net.minecraft.tag.ItemTags.SIGNS,
-				BlockFamily.Variant.TRAPDOOR, net.minecraft.tag.ItemTags.TRAPDOORS
+		public static final Map<BlockFamily.Variant, TagKey<Item>> BLOCK_FAMILY_VARIANTS = ImmutableMap.of(
+				BlockFamily.Variant.SLAB, ItemTags.SLABS,
+				BlockFamily.Variant.STAIRS, ItemTags.STAIRS,
+				BlockFamily.Variant.WALL, ItemTags.WALLS,
+				BlockFamily.Variant.BUTTON, ItemTags.BUTTONS,
+				BlockFamily.Variant.DOOR, ItemTags.DOORS,
+				BlockFamily.Variant.FENCE, ItemTags.FENCES,
+				BlockFamily.Variant.SIGN, ItemTags.SIGNS,
+				BlockFamily.Variant.TRAPDOOR, ItemTags.TRAPDOORS
 		);
 	}
 	
 	public static class BlockTagLists {
-		public static final List<TagKey<Block>> INFINIBURN_TAGS = List.of(
+		public static final List<TagKey<Block>> INFINIBURN_TAGS = ImmutableList.of(
 				AMTagKeys.createCommonBlockTag("meteor_ores"),
 				AMTagKeys.createCommonBlockTag("asteroid_ores")
 		);
 		
 		public static final Map<BlockFamily.Variant, TagKey<Block>> BLOCK_FAMILY_VARIANTS = ImmutableMap.<BlockFamily.Variant, TagKey<Block>>builder()
-																										.put(BlockFamily.Variant.SLAB, net.minecraft.tag.BlockTags.SLABS)
-																										.put(BlockFamily.Variant.STAIRS, net.minecraft.tag.BlockTags.STAIRS)
-																										.put(BlockFamily.Variant.WALL, net.minecraft.tag.BlockTags.WALLS)
-																										.put(BlockFamily.Variant.BUTTON, net.minecraft.tag.BlockTags.BUTTONS)
-																										.put(BlockFamily.Variant.DOOR, net.minecraft.tag.BlockTags.DOORS)
-																										.put(BlockFamily.Variant.FENCE, net.minecraft.tag.BlockTags.FENCES)
-																										.put(BlockFamily.Variant.SIGN, net.minecraft.tag.BlockTags.SIGNS)
-																										.put(BlockFamily.Variant.TRAPDOOR, net.minecraft.tag.BlockTags.TRAPDOORS)
-																										.put(BlockFamily.Variant.PRESSURE_PLATE, net.minecraft.tag.BlockTags.PRESSURE_PLATES)
-																										.put(BlockFamily.Variant.FENCE_GATE, net.minecraft.tag.BlockTags.FENCE_GATES)
-																										.put(BlockFamily.Variant.WALL_SIGN, net.minecraft.tag.BlockTags.WALL_SIGNS)
-																										.build();
+				.put(BlockFamily.Variant.SLAB, BlockTags.SLABS)
+				.put(BlockFamily.Variant.STAIRS, BlockTags.STAIRS)
+				.put(BlockFamily.Variant.WALL, BlockTags.WALLS)
+				.put(BlockFamily.Variant.BUTTON, BlockTags.BUTTONS)
+				.put(BlockFamily.Variant.DOOR, BlockTags.DOORS)
+				.put(BlockFamily.Variant.FENCE, BlockTags.FENCES)
+				.put(BlockFamily.Variant.SIGN, BlockTags.SIGNS)
+				.put(BlockFamily.Variant.TRAPDOOR, BlockTags.TRAPDOORS)
+				.put(BlockFamily.Variant.PRESSURE_PLATE, BlockTags.PRESSURE_PLATES)
+				.put(BlockFamily.Variant.FENCE_GATE, BlockTags.FENCE_GATES)
+				.put(BlockFamily.Variant.WALL_SIGN, BlockTags.WALL_SIGNS)
+				.build();
 	}
 	
 	public static class EntityTypeTagLists {
-		public static final List<TagKey<EntityType<?>>> DOES_NOT_BREATHE_TAGS = List.of(
+		public static final List<TagKey<EntityType<?>>> DOES_NOT_BREATHE_TAGS = ImmutableList.of(
 				AMTagKeys.EntityTypeTags.SKELETONS,
 				AMTagKeys.EntityTypeTags.SPACE_SLIMES
 		);
 		
-		public static final List<TagKey<EntityType<?>>> CAN_BREATHE_WATER_TAGS = List.of(
+		public static final List<TagKey<EntityType<?>>> CAN_BREATHE_WATER_TAGS = ImmutableList.of(
 				AMTagKeys.EntityTypeTags.FISH,
 				AMTagKeys.EntityTypeTags.SQUIDS,
 				AMTagKeys.EntityTypeTags.GUARDIANS,
 				AMTagKeys.EntityTypeTags.ZOMBIES // note: need to do special handling for husk -> zombie -> drowned
 		);
 		
-		public static final List<TagKey<EntityType<?>>> CANNOT_BREATHE_OXYGEN_TAGS = List.of(
+		public static final List<TagKey<EntityType<?>>> CANNOT_BREATHE_OXYGEN_TAGS = ImmutableList.of(
 				AMTagKeys.EntityTypeTags.FISH,
 				AMTagKeys.EntityTypeTags.SQUIDS
 		);
 	}
 	
 	public static class BlockVariantLists {
-		public static final List<BlockVariant> ORE_VARIANTS = List.of(
+		public static final List<BlockVariant> ORE_VARIANTS = ImmutableList.of(
 				BlockVariant.STONE_ORE,
 				BlockVariant.DEEPSLATE_ORE,
 				BlockVariant.NETHER_ORE,
@@ -438,14 +437,14 @@ public class DatagenLists {
 	}
 	
 	public static class ItemVariantLists {
-		public static final List<ItemVariant> ARMOR_VARIANTS = List.of(
+		public static final List<ItemVariant> ARMOR_VARIANTS = ImmutableList.of(
 				ItemVariant.HELMET,
 				ItemVariant.CHESTPLATE,
 				ItemVariant.LEGGINGS,
 				ItemVariant.BOOTS
 		);
 		
-		public static final List<ItemVariant> TOOL_VARIANTS = List.of(
+		public static final List<ItemVariant> TOOL_VARIANTS = ImmutableList.of(
 				ItemVariant.PICKAXE,
 				ItemVariant.AXE,
 				ItemVariant.SHOVEL,
@@ -454,19 +453,19 @@ public class DatagenLists {
 		);
 		
 		public static final List<ItemVariant> EQUIPMENT_VARIANTS = ImmutableList.<ItemVariant>builder()
-																				.addAll(ARMOR_VARIANTS)
-																				.addAll(TOOL_VARIANTS)
-																				.add(ItemVariant.HORSE_ARMOR)
-																				.build();
-		
-		public static final List<ItemVariant> CLUSTER_VARIANTS = List.of(
+																						 .addAll(ARMOR_VARIANTS)
+																						 .addAll(TOOL_VARIANTS)
+																						 .add(ItemVariant.HORSE_ARMOR)
+																						 .build();
+
+		public static final List<ItemVariant> CLUSTER_VARIANTS = ImmutableList.of(
 				ItemVariant.METEOR_ORE_CLUSTER,
 				ItemVariant.ASTEROID_ORE_CLUSTER
 		);
 	}
 	
 	public static class BlockFamilyLists {
-		public static final List<BlockFamily> SPACE_STONE_FAMILIES = List.of(
+		public static final List<BlockFamily> SPACE_STONE_FAMILIES = ImmutableList.of(
 				AMBlockFamilies.METEOR_STONE,
 				AMBlockFamilies.SMOOTH_METEOR_STONE,
 				AMBlockFamilies.POLISHED_METEOR_STONE,
